# tsak-old

./: .gitignore  Cargo.toml  README.md  logfile
.github/workflows/: rust.yml
examples/: 42_event.tsak  42_event_queue.tsak  42_event_raw.tsak  42_log_queue.tsak  42_log_raw.tsak  42_metric.tsak  42_metric_queue.tsak  42_metric_raw.tsak  data_sample.tsak  distribution_sawtooth.tsak  eventloop_1.tsak  find_zip.tsak  florida_weather.tsak  github_search.tsak  grok_do_match.tsak  hello_world.tsak  html_parser.tsak  input_binfile_zip.tsak  input_parse.tsak  input_snmp.tsak  input_ssh.tsak  input_textfile_backward.tsak  input_textfile_forward.tsak  input_zabbix.tsak  internetsearch_ddg.tsak  json_find.tsak  loop_script.tsak  print_cpu_useage.tsak  query_logs.tsak  query_myevents.tsak  query_myevents_and_give_answers.tsak  query_myevents_api.tsak  query_myevents_api_res.tsak  query_myevents_api_str.tsak  sampler_demo3.tsak  sampler_smooth_normalize.tsak  sampler_zip.tsak  security_raw.tsak  send_event.tsak  send_event_as_event.tsak  (+9 more)
examples/bus/: receiver.tsak  sender.tsak
src/: main.rs
src/cmd/: mod.rs  privilege.rs  sanity.rs  setloglevel.rs  tsak_bus_discovery.rs  tsak_bus_update_processors.rs  tsak_eval.rs  tsak_event.rs  tsak_exec.rs  tsak_fin.rs  tsak_init.rs  tsak_log.rs  tsak_logfiles_monitor.rs  tsak_metric.rs  tsak_processors.rs  tsak_queue_processors.rs  tsak_run.rs  tsak_shell.rs  tsak_spawn.rs  tsak_version.rs
src/lang/: mod.rs  scope.rs  size.rs  var.rs
src/stdlib/: banner.rs  genid.rs  mod.rs
src/stdlib/bus/: bus_update.rs  mod.rs  pipe.rs  queue.rs
src/stdlib/csv/: mod.rs
src/stdlib/data/: mod.rs  sampler.rs
src/stdlib/env/: mod.rs
src/stdlib/fake/: mod.rs
src/stdlib/fs/: mod.rs  search.rs
src/stdlib/github/: mod.rs
src/stdlib/grok/: mod.rs
src/stdlib/input/: bash.rs  binfile.rs  command.rs  distributions.rs  docker.rs  mod.rs  prometheus.rs  snmp.rs  socket.rs  spawn.rs  ssh.rs  textfile.rs  url.rs  zabbix.rs
src/stdlib/internetsearch/: mod.rs  wiki.rs
src/stdlib/json/: find.rs  mod.rs
src/stdlib/linguistic/: detect.rs  language_confidence.rs  mod.rs
src/stdlib/net/: interfaces.rs  mod.rs  ping.rs  scan.rs
src/stdlib/nn/: mod.rs
src/stdlib/nr/: mod.rs
src/stdlib/nr/event/: event_pipe.rs  event_type.rs  mod.rs  raw.rs
src/stdlib/nr/graphql/: mod.rs  nrql.rs  nrql_type.rs  query_tpl.rs  result_type.rs
src/stdlib/nr/log/: raw.rs
src/stdlib/nr/metric/: metric_pipe.rs  metric_type.rs  mod.rs  raw.rs
src/stdlib/nr/nrlog/: log_type.rs  mod.rs  raw.rs
src/stdlib/nr/security/: mod.rs  raw.rs  security_pipe.rs  security_type.rs
src/stdlib/nrql/: mod.rs
src/stdlib/parser/: filetype.rs  html.rs  mod.rs
src/stdlib/problem/: mod.rs
src/stdlib/sampler/: construct.rs  distributions.rs  eq.rs  forecast_oscillator.rs  generate.rs  harmonic.rs  markov.rs  mod.rs  normalize.rs  smooth.rs  tsf.rs  zip.rs
src/stdlib/string/: eval.rs  includes.rs  matches.rs  mod.rs  num_extract.rs  template.rs  text_text.rs  tokens.rs  tokens_text.rs  zip.rs
src/stdlib/system/: dmesg.rs  globals.rs  mod.rs  run.rs  sysctl.rs  system_loop.rs  system_metrics.rs
src/stdlib/timestamp/: mod.rs
src/stdlib/twitter/: mod.rs
src/stdlib/uuid/: mod.rs
src/stdlib/zabbix/: mod.rs
src/tsak_lib/: mod.rs
src/tsak_lib/discovery/: mod.rs
src/tsak_lib/io/: get_file.rs  mod.rs
