[package]
name = "tsak"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
curl = "0.4.44"
env_logger = "0.9.0"
flate2 = "1.0.24"
fsio = "0.4.0"
hostname = "^0.3"
howlong = "0.1.7"
lexical-core = "0.8.5"
log = "0.4.17"
neofiglet = "0.1.1"
new_string_template = "1.4.0"
rhai-rand = "0.1.4"
rhai-sci = "0.1.7"
rustyline = "10.0.0"
serde = "1.0.145"
ureq = "2.5.0"
serde_json = "1.0.86"
os_pipe = "1.1.1"
smartstring = "1.0.1"
sysinfo = "0.26.4"
polars-core = "0.24.3"
polars-io = "0.24.3"
jsonpath-rust = "0.1.6"
voca_rs = "1.15.0"
regex = "1.6.0"
grok = "2.0.0"
logwatcher = "0.1.1"
lazy_static = "1.4.0"
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }

[dependencies.rhai]
version = "1.10.1"
features = [
  "std",
  "serde",
  "decimal",
  "internals",
]

[dependencies.polars]
version = "0.23.2"
features = [
  "lazy",
  "csv-file",
  "strings",
  "temporal",
  "dtype-duration",
  "dtype-categorical",
  "concat_str",
  "list",
  "list_eval",
  "rank",
  "lazy_regex",
  "json",
]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
