[package]
name = "tsak"
version = "1.0.3"
edition = "2021"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
curl = "0.4.44"
env_logger = "0.9.0"
flate2 = "1.0.24"
fsio = "0.4.0"
hostname = "^0.3"
howlong = "0.1.7"
lexical-core = { version = "0.8.*", features = ["parse-floats"] }
log = "0.4.17"
neofiglet = "0.1.1"
new_string_template = "1.4.0"
rhai-rand = "*"
rhai-sci = "*"
rustyline = "10.0.0"
ureq = "2.5.0"
serde_json = "1.0.86"
os_pipe = "1.1.1"
smartstring = "1.0.1"
sysinfo = "0.26.4"
polars-core = "0.24.3"
polars-io = "0.24.3"
jsonpath-rust = "0.1.6"
voca_rs = "1.15.0"
regex = "1.6.0"
grok = "2.0.0"
logwatcher = "0.1.1"
lazy_static = "1.4.0"
futures = { version = "0.3.*" }
tokio = {version = "1.21.*", features = ["full", "time"] }
maver = "0.1.*"
fakeit = "1.1.1"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rustsv = "0.1.5"
snmp = "0.2.2"
prometheus-parse = "0.2.3"
urlencoding = "2.1.2"
ssh = "0.1.4"
crossbeam-channel = "0.5.6"
bastion = "0.4.5"
anyhow = "1.0.69"
text_placeholder = "0.4.0"
rust_search = "2.1.0"
fuzzy-matcher = "0.3.7"
distance = "0.4.0"
charabia = "0.7.0"
reachable = "0.2.2"
ndarray = "0.15.6"
compute = "0.2.3"
ta = "0.5.0"
statrs = "0.16.*"
rand = "0.8.*"
hyphenation = { version = "0.8.*", features = [] }
textwrap = { version = "0.16.*", features = ["smawk"] }
lingua = "1.4.*"
easy_reader = "0.5.*"
wikipedia = "0.3.4"
hyper = "0.14.24"
binary_rw = "4.0.4"
crossbeam-deque = "0.8.3"
expectrl = "0.6.0"


[dependencies.rhai]
version = "1.12.*"
features = [
  "std",
  "serde",
  "decimal",
  "internals",
]

[dependencies.polars]
version = "0.23.2"
features = [
  "lazy",
  "csv-file",
  "strings",
  "temporal",
  "dtype-duration",
  "dtype-categorical",
  "concat_str",
  "list",
  "list_eval",
  "rank",
  "lazy_regex",
  "json",
]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
